# elastic-parser

./: Cargo.toml
src/: lib.rs
src/aggregation/: mod.rs
