[package]
name = "elastic-parser"
version = "0.1.1"
edition = "2021"
authors = ["uiuifree"]
description = "ElasticSearch Response Parser"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "~1"
serde_json = "~1"
serde_derive = "1.0"
