[package]
name = "elastic-parser"
version = "0.1.15"
edition = "2021"
authors = ["uiuifree"]
description = "ElasticSearch Response Parser"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
